# ML_Research_Seminar

./: .gitignore  README.md  demo copy.ipynb  demo.ipynb  pyproject.toml  requirements.txt  test_models.py
closedform/: closedform_catflow.aux  closedform_catflow.fdb_latexmk  closedform_catflow.fls  closedform_catflow.out  closedform_catflow.tex
configs/data/: default.yaml
configs/eval/: default.yaml
configs/experiments/: exp_catflow_vqgan.yaml
configs/logging/: mlflow.yaml  wandb.yaml
configs/model/: catflow.yaml  vqgan.yaml
configs/train/: default.yaml
examples/: distillation_gaussian_multimodal.py  gaussian_multimodal.py  utils.py
src/: original_test_models.py  test_models.py
src/catflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: extract_features.py  swiss_roll.py
src/distillation/: scfm.py
src/evaluation/: __init__.py  fid.py  generalization.py  metrics_common.py  precision_recall.py
src/experiments/: closedform.py  entropies.py  mosaic.py  overfitting_uniprot.py  split_integration.py  split_integration_results.json  split_integration_results_cfm_gs.json  split_integration_results_kld_gs.json  use_llama.py  utils.py  velocity_error_llama.py  velocity_error_transformer.py  velocity_error_transformer_uniprot.py
src/models/: base_models.py  fm_wrapper.py  llama_models.py  ode.py  sfm.py  transformer.py  vfm_wrapper.py  vq_model.py
src/models/catflow/: mlp.py
src/training/: example.py  llamagen_cifar10.py  llamagen_cifar10_distillation.py  llamagen_imagenet64.py  train_cifar10.py  train_uniprot.py  vq_cifar10.py
