[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catflow"
version = "0.1.0"
description = "CatFlow Implementation"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchdiffeq>=0.2.5",
    "plotly>=6.5.0",
    "nbformat>=5.10.4",
    "scikit-learn>=1.7.2",
    "torchmetrics>=1.8.2",
    "matplotlib",
    "seaborn",
    "pandas",
    "ipykernel",
    "tqdm",
    "wandb",
    "comet_ml",
    "hydra-core",
    "black",
    "isort",
    "pre-commit",
    "einops>=0.8.2",
]
