[project]
name = "ml-research-seminar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip>=0.2.0",
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]
